--- a/lively_backend/.env
+++ b/lively_backend/.env
@@ -1,6 +1,9 @@
 GOOGLE_CLIENT_ID=320261561271-6ar5ea7qk97bchf61k2sggc6449ei4k3.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
 
+DB_USER=benson24
+DB_PASS=MuNHEjbIslhVW3qv
+
 CLOUDINARY_NAME=dk824teal
 CLOUDINARY_API_KEY=441964684332735
 CLOUDINARY_API_SECRET=9jXUTvXqxo668ZBdGAWdavcNTFY 
