--- a/lively_backend/package.json
+++ b/lively_backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -25,9 +25,8 @@
     "isomorphic-fetch": "^3.0.0",
     "md5": "^2.3.0",
     "mongoose": "^6.7.1",
-    "mongoose-auto-increment": "^5.0.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
