jwt verification completed

--- a/lively_backend/.env
+++ b/lively_backend/.env
@@ -8,3 +8,6 @@ CLOUDINARY_NAME=dk824teal
 CLOUDINARY_API_KEY=441964684332735
 CLOUDINARY_API_SECRET=9jXUTvXqxo668ZBdGAWdavcNTFY 
 LIVELY_PRESET="suhi4qbk"
+
+
+JWT_SECRET="lively@ben1234"
