--- a/lively_backend/package.json
+++ b/lively_backend/package.json
@@ -16,21 +16,24 @@
     "cloudinary": "^1.32.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.8",
     "es6-promise": "^4.2.8",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
     "isomorphic-fetch": "^3.0.0",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^6.7.1",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.0.1",
     "passport": "^0.6.0",
     "passport-google-oauth": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "path": "^0.12.7",
     "redis": "^4.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
