--- a/lively_backend/.env
+++ b/lively_backend/.env
@@ -9,5 +9,5 @@ CLOUDINARY_API_KEY=441964684332735
 CLOUDINARY_API_SECRET=9jXUTvXqxo668ZBdGAWdavcNTFY 
 LIVELY_PRESET="suhi4qbk"
 
-
-JWT_SECRET="lively@ben1234"
+PORT=8003
+JWT_SECRET=lively@ben1234
