--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,15 +30,8 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y awscli
     
-    - name: Delete remote main branch
-      run: |
-        aws codecommit delete-branch --repository-name Lively-AWS --branch-name main || echo "Branch not found, proceeding with push"
-    
-    - name: Add CodeCommit remote
-      run: |
-        git remote | grep codecommit || git remote add codecommit https://git-codecommit.us-east-1.amazonaws.com/v1/repos/Lively-AWS
-
-
-    - name: Push to AWS CodeCommit
-      run: |
-        git push codecommit main --force
+    - name: Sync up to CodeCommit
+      uses: DecryptLife/Lively@main
+      with:
+          repository_name: Lively-AWS
+          aws_region: us-east-1
