--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,11 @@ jobs:
         - uses: actions/checkout@v3
           with:
             fetch-depth: 0
+            
+        - name: Set up SSH
+          uses: webfactory/ssh-agent@v0.5.3
+          with:
+            ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
         - uses: pixta-dev/repository-mirroring-action@v1
           with:
             target_repo_url:
