--- a/lively_frontend/package.json
+++ b/lively_frontend/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.2.3",
     "classmates": "^1.0.1",
     "classnames": "^2.3.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
