--- a/lively_frontend/package.json
+++ b/lively_frontend/package.json
@@ -8,6 +8,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^22.5.4",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.2.3",
     "classmates": "^1.0.1",
@@ -18,7 +22,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "surge": "^0.23.1",
@@ -50,6 +54,8 @@
     ]
   },
   "devDependencies": {
-    "react-test-renderer": "^18.2.0"
+    "@types/axios": "^0.14.0",
+    "react-test-renderer": "^18.2.0",
+    "typescript": "^4.9.5"
   }
 }
