--- a/lively_frontend/package.json
+++ b/lively_frontend/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/lodash": "^4.17.7",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.5"
   }
