--- a/lively_frontend/package.json
+++ b/lively_frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.2.3",
     "classmates": "^1.0.1",
     "classnames": "^2.3.2",
+    "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -56,6 +57,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.7",
     "react-test-renderer": "^18.2.0",
     "typescript": "^4.9.5"
